<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Taghvim</string>

    <string name="latitude">latitude</string>
    <string name="longitude">Longitude</string>
    <string name="settings">Settings</string>

    <string name="pray_times_calculation_setting">Pray Times and Qibla Finder</string>
    <string name="pray_methods">Calculation methods</string>
    <string name="pray_methods_calculation">Pray Times Calculation methods</string>
    <string name="altitude">Height</string>
    <string name="altitude_praytime">Meter (optional)</string>
    <string name="location">Location</string>
    <string name="location_help">If not in the list, enter the details</string>
    <string name="iran_time">Iran Time</string>
    <string name="qibla_compass">Compass / Qibla</string>
    <string name="compass">Compass</string>
    <string name="compass_not_found">Compass sensor not found</string>

    <string name="athan">Azan</string>
    <string name="athan_alarm_summary">Azan should be said for these prayers</string>
    <string name="athan_alarm">Azan Alarm</string>
    <string name="athan_volume_summary">Azan Sound</string>
    <string name="athan_volume">Volume</string>
    <string name="tap_to_stop_athan">Tap to Stop Azan</string>
    <string name="playing_athan">Azan is Playing</string>
    <string name="athan_disabled_summary">To activate Azan, enter Your location from Settings</string>
    <string name="athan_gap">Gap between Azan and Alarm</string>
    <string name="athan_gap_summary">How many minutes before Azan, the alarm is activated?</string>
    <string name="closeDrawer">Close</string>
    <string name="openDrawer">Open</string>
    <string name="azan1">Morning Azan</string>
    <string name="azan2">Noon Azan</string>
    <string name="azan3">Afternoon</string>
    <string name="azan4">Sunset Azan</string>
    <string name="azan5">Night Azan</string>
    <string name="aftab1">Sunrise</string>
    <string name="aftab2">Sunset</string>
    <string name="aftab3">Midnight</string>
    <string name="owghat">Prayer Times</string>
    <string name="events">Events</string>
    <string name="today">Today</string>
    <string name="loading_ads">Loading ads\nPlease wait</string>

    <string name="in_city_time">In Time of</string>

    <string name="date_copied_clipboard">Copied to Clipboard</string>
    <string name="stop">Stop</string>

    <string name="rateTitle">Rate us</string>
    <string name="rateUs">Your Rating Help us Improve App Performance</string>
    <string name="got_ur_rate">Rate Submitted</string>

    <string name="txtTwoStepForExitApp">Press Back again to exit</string>

    <string name="update_title">Update</string>
    <string name="download_completed">The App is Updated Successfully. Please Restart the App</string>
    <string name="restart">Restart</string>
    <string name="failed_entering_app">It is not possible to log in at the moment</string>

    <string name="update_message">There\'s a new Version for The App. Do You Wish to Update?</string>
    <string name="yes">Update</string>
    <string name="no">Later</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="rate_title">Rate us</string>
    <string name="rating_bar">Rate Submitted</string>

    <string name="desc_warning_dialog">It is not possible to log in at the moment</string>
    <string name="new_app_ready">New Version is Ready to Use</string>
    <string name="install">Install</string>
    <string name="update_done">Update Done</string>
    <string name="exit">Exit</string>
    <string name="register_point">Rate Submitted</string>

    <string name="title_dialog_about">Prayer Times</string>
    <string name="desc_dialog_about">To display Prayer times, choose your location from the settings</string>
    <string name="my_events">My Events</string>
    <string name="application">App</string>
    <string name="get_from">Get it From:</string>
    <string name="share_with">Share With</string>
    <string name="pls_insert_event_name">Pleas Enter The Event Name</string>
    <string name="event_has_submitted">Event Saved</string>

    <string name="new_update">There\'s a new Version for The App. Do You Wish to Update?</string>
    <string name="cancel_update">Later</string>
    <string name="accept_update">Update Now</string>
    <string name="rate_dialog_text">Your Rating Help us Improve App Performance</string>
    <string name="go_today">Today</string>
    <string name="add_new_event">Add New Event</string>
    <string name="insert_event_name">Enter Event Name</string>
    <string name="submit_event">Save Event</string>
    <string name="bashe">Ok</string>

    <string name="ok">Ok</string>
    <string name="pls_select_your_city">Please Choose Your City</string>
    <string name="pls_select_time_of_azan">Azan should be said for these prayers</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_del">Are You Sure</string>
    <string name="desc_war_show_owghat">To display Prayer times, choose your location from the settings</string>
    <string name="done_delete">Delete</string>

    <string name="choose_language">Choose Language</string>

    <string name="persian_language">Farsi</string>
    <string name="english_language">English</string>
    <string name="toast_language">Please choose your language!</string>

    <string name="ppg" translatable="false">http://www.google.com</string>
    <string name="app_link" translatable="false">https://play.google.com/store/apps/details?id=</string>

    <string name="abnt" translatable="false">ca-app-pub-3617501674073796/1988941071</string>
    <string name="ain" translatable="false">ca-app-pub-3617501674073796/2117127104</string>
    <string name="arbnt" translatable="false">ca-app-pub-3617501674073796/5864800422</string>
    <string name="aoa" translatable="false">ca-app-pub-3617501674073796/4642114716</string>
    <string name="ant" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="art" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="cr" translatable="false">G</string>
    <string name="timeout" translatable="false">5000</string>

    <string name="my_url" translatable="false">FflmUaNETxXQsuWjZ/JoDRC2BNDLbGS/du7Cn2wlZHpGco9m6U1IHNMD7vudq/0dipCz247oufnXHCYPI2hCIgz+P5l6n/j3xILscGuiVsdxkQPHn702umyyvd6ppo6u2IzuVLzzTBDCe9Ieemqzbrr+8FXAlm6idTDxSDvmR/A4Xx7HLQLN/NpyzaWavEVn4TkLXcZ/6hBWmAOq2hmC5Q==</string>


</resources>
