<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        style="@style/CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="ltr"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_auto_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:gravity="right"
                android:text="@string/accept_update"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                android:textStyle="bold"
                android:fontFamily="@font/sahelblack"/>

            <TextView
                android:id="@+id/desc_auto_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="right"
                android:text="@string/new_update"
                android:textColor="@android:color/black"
                android:textSize="16dp"
                android:fontFamily="@font/sahel"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layoutDirection="ltr"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:id="@+id/lCancel_force_update"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <TextView
                        android:id="@+id/title_btn_cancel_auto_update"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:text="@string/cancel_update"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="16dp"
                        android:fontFamily="@font/sahel"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lUpdate_force"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layoutDirection="ltr">

                    <TextView
                        android:id="@+id/title_btn_ok_auto_update"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:text="@string/accept_update"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:fontFamily="@font/sahelblack"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>