<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="15dp"
        android:id="@+id/app_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@drawable/event_bg"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:textAlignment="center"
            android:layout_gravity="center"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/add_new_event"
            android:textSize="@dimen/dialog_text1"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/card_margin"
            android:layout_marginBottom="@dimen/card_margin"
            android:gravity="center"
            android:fontFamily="@font/sahelblack"/>

        <EditText
            android:textAlignment="center"
            android:id="@+id/txtedit"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/edittext"
            android:hint="@string/insert_event_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:layout_marginBottom="@dimen/card_margin"
            android:textSize="@dimen/dialog_text2"
            android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="@font/sahel"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/card_margin"
            android:background="@drawable/edittext"
            android:textColor="@color/black"
            android:textSize="@dimen/dialog_text2"
            android:gravity="center"
            android:fontFamily="@font/sahel"/>

        <RelativeLayout
            android:id="@+id/top"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/border">

            <TextView
                android:layout_centerInParent="true"
                android:id="@+id/mah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/dialog_text3"
                android:fontFamily="@font/sahel"/>

            <ImageView
                android:id="@+id/prev"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:src="@drawable/previous_btn_dialog" />

            <ImageView
                android:id="@+id/next"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/tx_up"
                android:layout_marginRight="@dimen/icon_size"
                android:gravity="center"
                android:src="@drawable/next_btn_dialog" />

        </RelativeLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/calendar_pager"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:layout_gravity="center_horizontal"
            android:background="@color/white" />

        <Button
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_save"
            android:textColor="@color/white"
            android:onClick="ok"
            android:id="@+id/ok"
            android:textSize="@dimen/dialog_text1"
            android:layout_marginBottom="@dimen/card_margin"
            android:text="@string/submit_event"
            android:fontFamily="@font/sahelblack">

        </Button>

    </LinearLayout>

</RelativeLayout>
