<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:targetApi="jelly_bean_mr1">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:fontFamily="@font/sahelblack"
                    android:gravity="left"
                    android:paddingLeft="20dp"
                    android:text="@string/choose_language"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layoutDirection="ltr"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:gravity="center_vertical|right"
                    android:layoutDirection="ltr"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/layout_english"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layoutDirection="ltr"
                        android:orientation="horizontal"
                        android:padding="5dp"
                        android:weightSum="10">

                        <ImageView
                            android:id="@+id/imgLanguage_english"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="2"
                            android:onClick="onClick"
                            android:src="@drawable/flag_en" />

                        <TextView
                            android:id="@+id/txtLanguage_english"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="8"
                            android:fontFamily="@font/sahel"
                            android:gravity="left"
                            android:onClick="onClick"
                            android:paddingLeft="10dp"
                            android:text="@string/english_language"
                            android:textColor="@color/black"
                            android:textSize="16dp" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_persian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="right"
                        android:layoutDirection="ltr"
                        android:orientation="horizontal"
                        android:padding="5dp"
                        android:weightSum="10">

                        <ImageView
                            android:id="@+id/imgLanguage_persian"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="2"
                            android:onClick="onClick"
                            android:src="@drawable/flag_fa" />

                        <TextView
                            android:id="@+id/txtLanguage_persian"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="8"
                            android:fontFamily="@font/sahel"
                            android:gravity="left"
                            android:onClick="onClick"
                            android:paddingLeft="10dp"
                            android:text="@string/persian_language"
                            android:textColor="@color/black"
                            android:textSize="16dp" />

                    </LinearLayout>

                </LinearLayout>

                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center"
                    android:layout_weight="1"
                    android:weightSum="2">

                    <RadioButton
                        android:id="@+id/rdBtn_english"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:checked="false"
                        android:gravity="center"
                        android:onClick="onClick"
                        android:theme="@style/DarkTheme_dialog"/>

                    <RadioButton
                        android:id="@+id/rdBtn_persian"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:checked="false"
                        android:gravity="center"
                        android:onClick="onClick"
                        android:theme="@style/DarkTheme_dialog"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|right">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_save_language_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/dark_primary"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingStart="20dp"
                        android:paddingLeft="20dp"
                        android:paddingEnd="20dp"
                        android:paddingRight="20dp">

                        <TextView
                            android:id="@+id/txt_save_language_dialog"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/sahelblack"
                            android:text="@string/ok"
                            android:textColor="@color/white"
                            android:textSize="16dp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>